feat(*): Add full name and short name option

--- a/src/options.html
+++ b/src/options.html
@@ -26,6 +26,11 @@
             <input type="checkbox" id="name-confirm" tabindex="0" class="hidden">
             <label>Ask the user to confirm the name before parsing the problem.</label>
           </div>
+
+          <div class="ui checkbox">
+            <input type="checkbox" id="short-name" tabindex="0" class="hidden">
+            <label>Use short name (usually is pid) instead of full name (usually is problem name).</label>
+          </div>
         </div>
         
         <div class="field">
