feat: add custom with usre custom script

--- a/src/options.html
+++ b/src/options.html
@@ -86,6 +86,14 @@
 
           <p>If debug mode is enabled, all the JSON data that is sent is logged to the console as well.</p>
         </div>
+        
+        <div class="field">
+          <label>Custom name</label>
+
+          <p>If you want to use a custom name, you can do so through Tampermonkey or other browser extensions by adding a <code>div</code> with <code>id="customNameForCompetitiveCompanionCustomized"</code> to the current page. Fill the div with the problem name you want, and this extension will read it and use it as the default name.</p>
+
+          <p><a href="https://greasyfork.org/zh-CN/scripts/545903-vjudge-example-for-custom-name-in-competitive-companion-customized">An example for VJudge with Tampermonkey</a>, which will read the title from the VJudge problem page and use it as the default problem name.</p>
+        </div>
       </div>
     </div>
 
